examples/karpenter-aws.yaml

# 6. Create Pod
apiVersion: v1
kind: Pod
metadata:
  name: inflate
spec:
  # UThis pod can only be scheduled onto nodes labeled node.k8s.aws/type=gpu
  nodeSelector:
    node.k8s.aws/type: gpu
  containers:
  - name: inflate
    image: public.ecr.aws/bitnami/nginx
    resources:
      requests:
        cpu: 1

---
